Zero: broken +ZeroTLAB exposes badly initialized memory

XMLWordPrintable

    • b14

      Looks like memory is badly initialized when -XX:+ZeroTLAB is specified.

      $ CONF=linux-x86_64-zero-fastdebug make exploded-test TEST=compiler/memoryinitialization/ZeroTLABTest.java

      command: main -Xcomp -XX:+UseTLAB -XX:+ZeroTLAB compiler.memoryinitialization.ZeroTLABTest
      reason: User specified action: run main/othervm -Xcomp -XX:+UseTLAB -XX:+ZeroTLAB compiler.memoryinitialization.ZeroTLABTest
      Mode: othervm [/othervm specified]
      elapsed time (seconds): 0.098
      configuration:
      STDOUT:
      Error occurred during initialization of VM
      java.lang.NullPointerException
      at java.lang.System.getProperty(java.base/System.java:836)
      at sun.security.action.GetPropertyAction.privilegedGetProperty(java.base/GetPropertyAction.java:105)
      at java.nio.charset.Charset.defaultCharset(java.base/Charset.java:604)
      at java.lang.StringCoding.decode(java.base/StringCoding.java:329)
      at java.lang.String.<init>(java.base/String.java:609)
      at java.lang.String.<init>(java.base/String.java:631)
      at jdk.internal.util.SystemProps$Raw.platformProperties(java.base/Native Method)
      at jdk.internal.util.SystemProps$Raw.<init>(java.base/SystemProps.java:233)
      at jdk.internal.util.SystemProps.initProperties(java.base/SystemProps.java:54)
      at java.lang.System.initPhase1(java.base/System.java:1988)

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: