8256732: Zero: broken +ZeroTLAB exposes badly initialized memory